# sentiment-analysis-app

./: .gitignore  README.md  logging.ini  pyproject.toml
src/ml/data/: make_dataset.py  preprocessing.py
src/ml/datasets/: tweet_datamodule.py  tweet_dataset.py
src/ml/engines/: system.py
src/ml/models/: lstm.py
src/ml/scripts/: test.py  train.py
src/ml/utils/: constants.py  helpers.py  tokenizer.py
